@@ -143,6 +143,9 @@ Release 0.12.1 - unreleased
 
     S2GRAPH-81: Separate Serializable's toKeyValues into 3, toRowKey, toQualifier, toValue. (Committed by DOYUNG YOON).
 
+    S2GRAPH-88: Add DISCLAIMER, LICENSE, NOTICE on packaging process.
+		(Contributed by Jong Wook Kim<jongwook@nyu.edu>, committed by DOYUNG YOON)
+
   TEST
     
     S2GRAPH-21: Change PostProcessBenchmarkSpec not to store and fetch test data from storage. (Committed by DOYUNG YOON).
